--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Fun Bus Travel Agency - Solution</title>
 
@@ -29,18 +30,23 @@
         </nav>
         <img src="/img/fun-bus.jpg" alt="A bus going across the desert" />
         <h1 class="fun-bus-img">Welcome To Fun Bus!</h1>
-        <p>
-          Traveling expedtion modern, clean webdesign blogger clean website
-          theme website modern. Design pretty design, travelblogger adventur
-          WordPress wanderlust theme blogger website expedtion theme
-          travelblogger. Adventure fun traveler pretty design website expedtion.
-        </p>
+
+        <div class="text-content">
+          <p>
+            Traveling expedtion modern, clean webdesign blogger clean website
+            theme website modern. Design pretty design, travelblogger adventur
+            WordPress wanderlust theme blogger website expedtion theme
+            travelblogger. Adventure fun traveler pretty design website
+            expedtion.
+          </p>
+        </div>
       </header>
       <div class="inverse-content"></div>
 
       <section class="content-section">
         <div class="text-content">
           <h2>Let's Go!</h2>
+
           <p>
             Adventure webdesign pretty design design, excursion cute WordPress
             blogger design webdesign adventure. Pretty simple traveling fun
