Added padding to the top image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
-        <img src="/img/fun-bus.jpg" alt="A bus going across the desert" />
+        <img
+          src="/img/fun-bus.jpg"
+          style="margin-bottom: 20px;"
+          alt="A bus going across the desert"
+        />
         <h1 class="fun-bus-img">Welcome To Fun Bus!</h1>
 
         <div class="text-content">
