--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
     <div class="container home">
       <header class="content-section">
         <h1 class="funBus">Fun Bus</h1>
+
         <nav class="mainNav">
           <a href="#">Home</a>
           <a href="#">About Us</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
+
         <img
           src="/img/fun-bus.jpg"
           style="margin-bottom: 20px;"
           alt="A bus going across the desert"
         />
+
         <h1 class="fun-bus-img">Welcome To Fun Bus!</h1>
 
-        <div class="text-content">
-          <p>
-            Traveling expedtion modern, clean webdesign blogger clean website
-            theme website modern. Design pretty design, travelblogger adventur
-            WordPress wanderlust theme blogger website expedtion theme
-            travelblogger. Adventure fun traveler pretty design website
-            expedtion.
-          </p>
-        </div>
+        <p>
+          Traveling expedtion modern, clean webdesign blogger clean website
+          theme website modern. Design pretty design, travelblogger adventur
+          WordPress wanderlust theme blogger website expedtion theme
+          travelblogger. Adventure fun traveler pretty design website expedtion.
+        </p>
       </header>
       <div class="inverse-content"></div>
 
